# sicompass-plugin-sdk

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  sicompass_sdk.h
.github/workflows/: release.yml
src/: dashboard.rs  ffon.rs  fs_trash.rs  lib.rs  localize.rs  manifest.rs  meta.rs  placeholders.rs  platform.rs  plugin_loader.rs  provider.rs  tags.rs  timeline.rs  url_fetcher.rs
