[package]
publish = false  # internal crate, never published to crates.io
name = "sicompass-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass provider SDK — FFON types, Provider trait, tag parsing, platform utils"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
unicode-normalization = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }
libloading = { workspace = true }
trash = "5"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
