[package]
name = "sicompass-sdk"
version = "0.1.6"
edition = "2024"
license = "GPL-3.0-only"
description = "Sicompass provider SDK — FFON types, Provider trait, tag parsing, platform utils"
repository = "https://github.com/friendlyflow/sicompass-plugin-sdk"
readme = "README.md"
keywords = ["sicompass", "plugin", "sdk", "provider"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
scraper = "0.27"
url = "2"
libloading = "0.9"
trash = "5"
fluent = "0.17"
fluent-langneg = "0.14"
unic-langid = "0.9"
intl-memoizer = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"

[dev-dependencies]
mockall = "0.15"
tempfile = "3"
